# FTIR_absorbtion_ML

./: .gitignore  CHANGELOG.md  README.md  colab_train.ipynb  data_loader.py  inference.py  model.py  pyproject.toml  requirements-pinned.txt  requirements.txt  runner.py  synthetic_generator.py  train.py
archive/: results_gradmag_smooth.txt
archive/example_data/: 20250514_TEST_001_DIESEL_EXTENDED_R4_1571.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1572.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1573.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1574.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1575.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1576.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1577.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1578.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1579.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1580.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1581.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1582.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1583.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1584.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1585.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1586.spc  20250514_TEST_001_DIESEL_EXTENDED_R4_1587.spc  (+34 more)
data/reference/: manifest_v1.csv
docs/: data_export_contract.md  migration.md  training_progress.md
example_data/: ml_solver_results.csv
expected_test_ranges/: selected_points.csv
reports/: class_distribution.csv  data_audit.md
tests/: test_export_formats.py  test_inference_runtime.py  test_manifest_pipeline.py  test_spectra_io.py  test_synthetic_generator_curriculum.py  test_training_metrics.py  test_v4_features.py
(+967 files in other folders)
